<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/auto2"
    android:orientation="vertical"
    tools:context="com.example.krzy007.e_kalendarzprowadzacychpojazdy.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:gravity="center"
        android:background="@color/colorPrimary"
        android:text="@string/text_menu"
        android:id="@+id/textView" />

    <TextView
        android:id="@+id/miesiacRok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20sp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:text="TextView" />

    <TextView
        android:id="@+id/viewIloscGodzin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/miesiacRok"
        android:gravity="center"
        android:text="TextView"
        android:textSize="40sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20sp"
        android:layout_alignEnd="@+id/viewIloscGodzin"
        android:layout_alignRight="@+id/viewIloscGodzin"
        android:layout_below="@+id/viewIloscGodzin"
        android:text="@string/month" />

    <Button
        android:id="@+id/btnPrev"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/btnDelete"
        android:layout_alignRight="@+id/btnDelete"
        android:layout_below="@+id/textView3"
        android:layout_marginEnd="35dp"
        android:layout_marginRight="43dp"
        android:text="@string/prev"
        android:onClick="onClickPrev"/>

    <Button
        android:id="@+id/btnNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnDelete"
        android:layout_alignStart="@+id/btnDelete"
        android:layout_below="@+id/textView3"
        android:layout_marginLeft="54dp"
        android:layout_marginStart="35dp"
        android:text="@string/next"
        android:onClick="onClickNext"/>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnPrev"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:text="@string/add_work"
        android:onClick="onClickAddWork"/>

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:text="@string/search_work"
        android:onClick="onClickSearchWork"/>

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button2"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:onClick="onClickDelete"
        android:text="Info" />


</RelativeLayout>
